UPDATE: Materials and script for ApamaCE installation and usage. Generic hints about vagrant