@@ -1,32 +1,33 @@
 ## About
 
-Installing "Pentaho Server 7.1". Current configuration is based on the repository [vagrant-pentaho-biserver-5](https://github.com/lricardo/vagrant-pentaho-biserver-5)
+Installing "Apama CE 10.1".
 
-## Feature set
+## Running Apama via comman line
 
-* Ubuntu 16.04.1 LTS
-* PostgreSQL 9.5 (without extensions loaded)
-* Pentaho BI Server 7.1.0
-* Oracle JDK 8
-* Add-on: Systemd unit for automatic startup of pentaho
+* Use scripts that are in "apama-scripts" on your host or in /vagrant/apama-scripts/ at your VM
+* Start correlation
+```
+cd /opt/softwareag/Apama/bin
+. apama_env
+correlation
+```
+* Inject monitors / events
+```
+. /opt/softwareag/Apama/bin/apama_env
+/opt/softwareag/Apama/bin/engine_inject /vagrant/apama-scripts/dummySecurityEvents.mon
+/opt/softwareag/Apama/bin/engine_inject /vagrant/apama-scripts/dummySecurityEventsMonitor.mon
+/opt/softwareag/Apama/bin/engine_inject /vagrant/apama-scripts/dummySecurityEventsGeneratorMonitor.mon
+```
+* Delete monitors
+```
+/opt/softwareag/Apama/bin/engine_delete com.apama.security.Security;
+/opt/softwareag/Apama/bin/engine_delete com.apama.security.SecurityEventsGenerator
+```
+* Sending events
+```
+/opt/softwareag/Apama/bin/engine_send /vagrant/apama-scripts/dummySecurityEventsSend.evt
+```
 
-## Configuration
+## Materials
 
-Change **Vagrantfile** as you wish, in the provider settings to configure the number of CPUs and the amount for RAM.
-By default, this machine uses 2 cores and 2 GB of RAM (the minimum recommended). Note that also DEFAULT "start-pentaho.sh" **MUST** be adapter to the performance of your VM.
-
-## Usage
-
-* Download files of this folder
-* Navigate into the cloned folder
-* Run cmd *vagrant up*
-
-By default, you can access *Pentaho User Console* by accessing [http://localhost:8080](http://localhost:8080). To login, use *admin* as username and *password* as password. Don't push enter, click in the login button!
-
-## Useful Notes for Managing Pentaho Sever 7.1 CE
-
-* Change memory parameters in the start file for VM to the "... -Xms768m -Xmx2048m -XX:MaxPermSize=128m ..."
-    -```sudo nano /opt/pentaho/pentaho-server/start-pentaho.sh```
-* See whether Pentaho is running:
-    - ```cat /opt/pentaho/pentaho-server/tomcat/logs/catalina.out```
-* Article [Best Practices - Tomcat Performance Tuning for Pentaho](https://support.pentaho.com/hc/en-us/articles/210448223-Best-Practices-Tomcat-Performance-Tuning-for-Pentaho)
+* [Using Apama from the Linux Command Line](https://www.youtube.com/watch?v=hin-u-Hip4E)
